test-suite/negative/28_double_def_keyword.sysml
/**
 * NEGATIVE TEST: Double 'def' keyword
 * EXPECTED ERROR: Syntax error - duplicate keyword
 * CATEGORY: Syntax Errors
 */
package NegativeTests {
    part def def TestPart {  // ERROR: Double 'def' keyword
        attribute x : Integer;
    }
}
